# FastApiBase

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
application/: .env-template  docker-compose.yml  main.py
application/api/: __init__.py
application/api/users/: __init__.py  users.py
application/core/: __init__.py  config.py
application/core/enums/: __init__.py  loguru_enums.py
application/core/models/: __init__.py  db_helper.py
src/: .env-template  alembic.ini  celery_config.py  config.py  consumer.py  create_superuser.py  docker-compose.yml  email_consumer.py  mail.py  main.py  producer.py  send_email_request.py
src/alembic/: env.py
src/api/: hello_world.py  router.py
src/api/dependencies/: backend.py  strategy.py  users.py  users_routes.py
src/api/dependencies/authentication/: auth_router.py  backend.py  strategy.py  token_db.py  tokens.py  user_db.py  user_manager.py  user_manager_routes.py  verify_router.py
src/api/endpoints/: __init__.py  router.py  users.py
src/api/router/: __init__.py  auth.py  root.py  users.py
src/api/routers/: mail_router.py  mail_services.py
src/api/users/: views.py
src/core/: __init__.py  config.py  db_helper.py
src/core/auth/: transport.py  user_manager.py
src/core/celery/: celery.py
src/core/enums/: __init__.py  loguru_enums.py
src/core/mixins/: __init__.py
src/core/mixins/model_mixins/: datetime_mixin.py  model_relation_mixin.py
src/core/models/: __init__.py  base.py
src/core/models/mixins/: crt_upd_datetime.py
src/core/models/profile/: profile_model.py
src/core/models/token/: access_token.py  access_token_model.py  crud.py  refresh_token_model.py
src/core/models/user/: user_model.py
src/core/schemas/: user_manager.py
src/core/settings/: config.py
src/core/types/: user_types.py
src/core/utils/: __init__.py  converters.py  database.py  db_helper.py  remove_comments.py
src/crud/: users.py
src/models/: __init__.py  base.py
src/models/mixins/: crt_upd_datetime.py
src/models/users/: user.py
src/services/: mail_services.py  pika_helper.py
src/settings/: config.py
src/settings/celery/: celery_config.py
src/templates/: email_template.html
src/utils/: pika_helper.py
