[tool.poetry]
package-mode = false
name = "fastapibase"
version = "0.1.0"
description = "BaseFastApiProject"
authors = ["pvs.versia@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
pydantic = { extras = ["email"], version = "^2.10.3" }
pydantic-settings = "^2.6.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pylance = "^0.20.0"
loguru = "^0.7.2"
alembic = "^1.14.0"
orjson = "^3.10.12"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
aio-pika = "^9.5.3"

[tool.ruff]
line-length = 88

[tool.lint]
line-length = 88
select = ["E", "W", "F", "I"]
lint.ignore = ["E203"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

