[tool.poetry]
package-mode = false
name = "fastapibase"
version = "0.1.0"
description = "BaseFastApiProject"
authors = ["pvs.versia@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
pydantic = { extras = ["email"], version = "^2.10.3" }
pydantic-settings = "^2.6.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pylance = "^0.20.0"
loguru = "^0.7.2"
alembic = "^1.14.0"
orjson = "^3.10.12"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = ''' /( \.git | \.venv | build | dist | pg_data )/ '''

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
force_sort_within_sections = true
combine_as_imports = true
lines_after_imports = 2
known_third_party = ["fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "asyncpg",
    "pylance",
    "loguru",
    "alembic",
    "orjson",
    "pika",
    "aio-pika"]
known_first_party = ["fastapibase"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

